<resources>
    <string name="app_name" translatable="false">test</string>
    <string name="error_unable_to_start_form">An error occurred when starting the form</string>
    <string name="error_unable_to_save_form">An error occurred when saving the form</string>
    <string name="cdp">CDP</string>
    <string name="add_member">Add Member</string>
    <string name="sort">Sort</string>
    <string name="home">Home</string>
    <string name="add_family">Add family</string>
    <string name="scan_qr">Scan QR</string>
    <string name="job_aids">Job Aids</string>
    <string name="saving_dialog_title">Saving</string>
    <string name="interpunct" translatable="false">\u00b7</string>
    <string name="cdp_followup_visit">FOLLOWUP\nVISIT</string>
    <string name="record_cdp">Record cdp follow-up</string>
    <string name="return_to_previous_page">Return all CDP Clients</string>
    <string name="last_visit_40_days_ago">Last visit %1$s ago</string>
    <string name="view_medical_history">View medical history</string>
    <string name="call_no_number_provided">(no number provided)</string>
    <string name="view_upcoming_services">View upcoming services</string>
    <string name="family_has_nothing_due">Family has nothing due</string>
    <string name="go_to_family_s_profile">Go to family\'s profile</string>
    <string name="family_has_services_due">Family has services due</string>
    <string name="primary_care_giver">PRIMARY CARE GIVER</string>
    <string name="family_head">FAMILY HEAD</string>
    <string name="family_has_service_overdue"><![CDATA[Family has <font color=#FF0000>services overdue</font></b>]]></string>
    <string name="vaccine_service_upcoming"><![CDATA[%1$s <font color=#7f7f7f>upcoming (%2$s)</font></b>]]></string>
    <string name="vaccine_service_overdue"><![CDATA[%1$s <font color=#f04646>overdue (%2$s)</font></b>]]></string>
    <string name="vaccine_service_due"><![CDATA[%1$s <font color=#000000>due (%2$s)</font></b>]]></string>
    <string name="call_cdp_client">CDP Client</string>
    <string name="head_of_family">Head of family</string>
    <string name="cdp_client">CDP Client</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_phone_number">PhoneNumber copied to clipboard</string>
    <string name="call">Call</string>
    <string name="record_anc">Record ANC visit</string>
    <string name="record_anc_visit_not_done">ANC visit not done</string>
    <string name="not_visiting_this_month">Not visiting this month</string>
    <string name="undo">UNDO</string>
    <string name="call_family_head">Head of Family</string>
    <string name="call_primary_caregiver">Primary Caregiver</string>
    <string name="call_anc_client">ANC Client</string>
    <string name="call_pnc_client">PNC Client</string>
    <string name="call_head_of_family">Call Head of Family</string>
    <string name="view_cdp_test_result">View cdp test results</string>
    <string name="cdp_positive">CDP positive</string>
    <string name="anc_string">ANC</string>
    <string name="pnc_string">PNC</string>
    <string name="visit_done">Visit Done</string>
    <string name="edit">EDIT</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="outlet_registration">Outlet Registration</string>
    <string name="menu_cdp">Condom Programming</string>
    <string name="menu_issue_condoms">Incoming Requests</string>
    <string name="menu_order_condoms">Outgoing Requests</string>
    <string name="menu_receive_cdp_from_organizations">Receive Condoms From Organizations</string>
    <string name="add_outlet">Add Outlet</string>
    <string name="edit_outlet">Edit Outlet Information</string>
    <string name="disable_outlet">Disable Outlet</string>
    <string name="enable_outlet">Enable Outlet</string>
    <string name="manifests">Manifests</string>
    <string name="settings">Settings</string>
    <string name="hvl_manifest">Create HVL Manifests</string>
    <string name="heid_manifest">Create HEID Manifests</string>
    <string name="action_download_test_results">Download Test Results</string>
    <string name="test_requests">Samples Requests</string>
    <string name="sample_requests">All Outlets</string>
    <string name="successful">Successful</string>
    <string name="sent_pending_orders">Pending/In-Transit</string>
    <string name="all_received_orders">All Received Requests</string>
    <string name="all_sent_orders">All Sent Requests</string>
    <string name="no_unique_id">No unique Id found</string>
    <string name="return_to_all_sample_test_requests">Return to Sample Test Requests</string>
    <string name="record_test_sample_collection">Record Test Sample Processing</string>
    <string name="record_test_sample_results">Record Test Sample Results</string>
    <string name="record_provision_of_results_to_clients">Record Provision of Results to Client</string>
    <string name="call_focal_person">Focal Person</string>
    <string name="last_recorded_stock">Last recorded stock: %d</string>
    <string name="type_label">Type:</string>
    <string name="quantity_label">Quantity (Pieces):</string>
    <string name="brand_label">Brand:</string>
    <string name="health_facility">Health Facility:</string>
    <string name="requester_name">Requester:</string>
    <string name="request_date_label">Request Date:</string>
    <string name="issuing_organization_label">Issuing Organization:</string>
    <string name="restocking_date_label">Restocking Date:</string>
    <string name="type_label_text">Type</string>
    <string name="quantity_label_text">Quantity (Pieces)</string>
    <string name="brand_label_text">Brand</string>
    <string name="restocking_date_label_text">Restocking Date</string>
    <string name="restock_button_label">Restock</string>
    <string name="stock_button_label">Stock</string>
    <string name="restocking_visit_history_label">Restocking Visit History</string>
    <string name="male_condom">Male Condom</string>
    <string name="female_condom">Female Condom</string>
    <string name="public_sc">Public Sector Condom</string>
    <string name="dume">Dume</string>
    <string name="salama">Salama</string>
    <string name="familia">Familia</string>
    <string name="others">Others</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_status_in_transit">In Transit</string>
    <string name="order_status_complete">Successful</string>
    <string name="order_status_failed">Out Of Stock</string>
    <string name="return_to_all_manifests">Return to all Manifests</string>
    <string name="manifest_details_title">Manifest Details</string>
    <string name="requests">Pending Requests</string>
    <string name="request_date_label_text">Request Date</string>
    <string name="health_facility_name_label">Health Facility Name</string>
    <string name="requester_name_label">Requester Name</string>
    <string name="dispatch_label">DISPATCH</string>
    <string name="save_draft_label">SAVE DRAFT</string>
    <string name="out_of_stock_message">Confirming this, will close this order request and mark it as failed</string>
    <string name="mark_as_received">Mark As Received</string>
    <string name="sample_list">Sample List:</string>
    <string name="response_date_label_text">Response Date</string>
    <string name="receive_condoms">Receive Condoms\nFrom Organizations</string>
    <string name="received_from_history">Received From History</string>
    <string name="response_status_label">Response Status</string>
    <string name="rs_restocked">Restocked</string>
    <string name="rs_out_of_stock">Out of Stock</string>
    <string name="date_label">Date:</string>
    <string name="sample_results">Sample Results</string>
    <string name="test_samples">Test Samples</string>

    <string name="unprocessed">Unprocessed</string>
    <string name="uploaded">Uploaded</string>
    <string name="has_results">RESULTS</string>
    <string name="has_invalid_results">INVALID</string>
    <string name="has_rejected_results">REJECTED</string>
    <string name="processed">Processed</string>
    <string name="patient_id">Patient ID</string>
    <string name="sample_id">Sample ID</string>
    <string name="create_manifest">Create Manifest</string>
    <string name="set_destination_hub_lab">Please configure Destination Hub/Lab</string>
    <string name="no_test_samples">There are no test samples</string>

    <string name="test_results_copies_per_ml">%s copies/ml</string>
    <string name="has_pending_sample_collection">Has Pending Sample Collection</string>


    <string name="dispatched">DISPATCHED</string>
    <string name="draft">DRAFT</string>
    <string name="hvl_test_sample_title">HVL Test Sample Details</string>
    <string name="heid_test_sample_title">HEID Test Sample Details</string>


</resources>
